@@ -119,11 +119,15 @@ if(availableGB > 6) system.time(withAutoprint({
 })) ## 4.8--5.5 sec.
 rm(r); gc()
 
-if(availableGB > 17) withAutoprint({
-    n <- 2.2e9; n/.Machine$integer.max  # 1.024 ==> need  long vectors!
-    system.time(ii <- seq_len(n))       #   user  system elapsed
-                                        #  2.592   6.979   9.593
-    system.time(i2 <- ii[-n])           # 16.057  25.361  41.548 (slow!)
+n <- 4e4 # << for quick testing, comment next line
+n <- 2.2e9
+
+if(availableGB > 60) withAutoprint({
+    n/.Machine$integer.max  # 1.024 ==> need  long vectors!
+    ii <- seq_len(n)          #   user  system elapsed  [seq_len() fast: ALTREP "compact"]
+    system.time(ii <- ii + 0) #
+    system.time(i2 <- ii[-n]) # 14.267  23.532  37.918 (slow!)
+    ##
     ## NB: keep n, i, i2 for "below"
 })
 ## In R <= 3.4.1 :
@@ -132,38 +136,54 @@ if(availableGB > 17) withAutoprint({
 ##     nx=2200000000, ns=1, s=0x426db18) at ../../../R/src/main/subscript.c:691
 ## 691			    LOGICAL(indx)[ix] = 0;
 
-if(availableGB > 70) withAutoprint({
-    system.time( x <- ii/n )            #  7.29 user; 11.5--14.36 elapsed
-    system.time( y <- sin(pi*x) )       # 50.5  user; 57.4--76.1  elapsed
+if(availableGB > 99) withAutoprint({
+    system.time( x <- ii/n )            #   5.45 user; 11.5--14.36 elapsed
+    system.time( y <- sin(pi*x) )       #  42 user; 48.9--..  elapsed
+    system.time(sorted <- !is.unsorted(x)) # ~ 4 elapsed
+    stopifnot(sorted)
     ## default n (= "nout") = 50:
-    system.time(ap1 <- approx(x,y, ties = "ordered"))# 15.6 user; 25.8 elapsed
+    system.time(ap1 <- approx(x,y, ties = "ordered"))# 15 user; 25 elapsed
     stopifnot(exprs = {
 	is.list(ap1)
 	names(ap1) == c("x","y")
 	length(ap1$x) == 50
-	all.equal(ap1$y, sin(pi*ap1$x), tol= 1e-15)
+	all.equal(ap1$y, sin(pi*ap1$x), tol= 1e-9)
     })
     rm(ap1); gc() ## keep x,y,n,i2 --> max used: 92322 Mb
 })
 
+## which() and ifelse() working for long vectors
+if(availableGB > 165) withAutoprint({
+    system.time(iis <- which(isMl <- ii < 9999)) # 5.8 user,  8.8 elapsed
+    gc() # 59 GB max used
+    system.time(r <- ifelse(isMl, ii, ii*1.125)) #        user  system elapsed
+    stopifnot(exprs = {                 # in R 3.5.2 : 124.989 174.726 300.656
+	## GB's ifelse() + using which(<long>) 3.6.0 :  71.815  81.823 154.124
+	length(r) == n
+        iis == seq_len(9998)
+    })
+    rm(isMl, iis, r)
+})
+gc() # 159 GB max used
+
 if(availableGB > 211) withAutoprint({ ## continuing from above
     ## both large (x,y) *and* large output (x,y):
-    system.time(xo <- x+1/(2*n))     # 9.0 elapsed
+    system.time(xo <- x + 1/(2*n))     # ~ 9 elapsed
     system.time(ap <- approx(x,y, ties = "ordered", xout = xo))
-                                        # elapsed 561.4; using ~ 67 GB
-    gc() # showing max.used ~ 109106 Mb
+                                       # 194 user, 214--500 elapsed
+    gc(reset = TRUE) # showing max.used ~ 1..... Mb
     stopifnot(exprs = {
 	is.list(ap)
 	names(ap) == c("x","y")
 	length(ap$x) == n
 	is.na(ap$y[n]) # because ap$x[n] > 1, i.e., outside of [0,1]
-	all.equal(ap$y[i2], sin(pi*xo[i2]), tol= 1e-15)
+	all.equal(ap$y[i2], sin(pi*xo[i2]), tol= if(n < 1e7) 1e-8 else 1e-15)
     })
     rm(ap); gc() # showing used 83930 Mb | max.used 210356.6 Mb
     ## only large x,y :
     system.time(apf <- approxfun(x,y, ties="ordered", rule = 2))# elapsed: ~26s
     xi <- seq(0, 1, by = 2^-12) ## linear interpol. is less accurate than spline:
-    stopifnot(all.equal(apf(xi), sin(pi*xi), tol= 1e-11))
+    stopifnot(all.equal(apf(xi), sin(pi*xi), tol= if(n < 1e7) 1e-7 else 1e-11))
     rm(apf); gc() # (~ unchanged)
     system.time(ssf <- splinefun(x,y, ties = "ordered"))
                                         # elapsed 120 s; using ~ 158 GB
@@ -178,7 +198,7 @@ if(availableGB > 211) withAutoprint({ ## continuing from above
 	all.equal(ssf(xi), ss$y,       tol= 1e-15)
     })
     rm(x, y, xo, ss, ssf) # remove long vector objects
-    gc()
+    gc(reset=TRUE)
 })
 
 ## sum(<Integer|Logical>) -- should no longer overflow: ----------------------------------------
@@ -195,6 +215,7 @@ if(availableGB > 24) withAutoprint({
         identical(sL, as.integer(2^29))
     })
 }) ## sL would be NA with an "integer overflow" warning in R <= 3.4.x
+gc(reset=TRUE)
 
 ## 2) many (and relatively long and large) integers
 L <- as.integer(2^31 - 1)## = 2147483647L = .Machine$integer.max ("everywhere")
@@ -214,5 +235,8 @@ if(availableGB > 12) withAutoprint({
     rm(x32)
 })
 
+
+
+gc() # NB the "max used"
 
 proc.time() # total
